more files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -698,3 +698,5 @@ tests/mini-global-load
 .submodule.stamp
 lib/priority_options.h
 tests/name-constraints
+tests/x509-extensions
+tests/sec-params
