--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1451,15 +1451,12 @@ int gnutls_certificate_set_x509_crl(gnutls_certificate_credentials_t res,
 				    gnutls_x509_crl_t * crl_list,
 				    int crl_list_size);
 
-int gnutls_certificate_get_x509_key(gnutls_certificate_credentials_t res,
-                                    unsigned index,
-                                    gnutls_x509_privkey_t *key);
-int gnutls_certificate_get_x509_crt(gnutls_certificate_credentials_t res,
-                                    unsigned index,
-                                    gnutls_x509_crt_t **crt_list,
-                                    unsigned *crt_list_size);
+/* OCSP status request extension, RFC 6066 */
 
-  /* OCSP status request extension, RFC 6066 */
+/* The magic number that files containing more than a single OCSP
+ * status response have. */
+#define GNUTLS_OCSP_MULTI_MAGIC 0xcece15ab
+
 typedef int (*gnutls_status_request_ocsp_func)
  (gnutls_session_t session, void *ptr, gnutls_datum_t * ocsp_response);
 
@@ -1481,6 +1478,9 @@ int gnutls_ocsp_status_request_enable_client(gnutls_session_t session,
 
 int gnutls_ocsp_status_request_get(gnutls_session_t session,
 				   gnutls_datum_t * response);
+int
+gnutls_ocsp_status_request_get_multi(gnutls_session_t session,
+			       gnutls_datum_t * response, unsigned idx);
 
 #define GNUTLS_OCSP_SR_IS_AVAIL 1
 int gnutls_ocsp_status_request_is_checked(gnutls_session_t session,
