--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1023,6 +1023,7 @@ int gnutls_heartbeat_allowed(gnutls_session_t session, unsigned int type);
   /* Safe renegotiation */
 int gnutls_safe_renegotiation_status(gnutls_session_t session);
 unsigned gnutls_session_ext_master_secret_status(gnutls_session_t session);
+unsigned gnutls_session_etm_status(gnutls_session_t session);
 
 /**
  * gnutls_supplemental_data_format_type_t:
