Added API to read/write/delete key-cert pairs (limited to windows for now)

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -82,7 +82,8 @@ COBJECTS = gnutls_range.c gnutls_record.c \
 	random.c crypto-api.c gnutls_privkey.c gnutls_pcert.c		\
 	gnutls_pubkey.c locks.c gnutls_dtls.c system_override.c	\
 	crypto-backend.c verify-tofu.c pin.c tpm.c fips.c \
-	safe-memfuncs.c inet_pton.c atfork.c atfork.h
+	safe-memfuncs.c inet_pton.c atfork.c atfork.h system-keys.c \
+	system-keys.h
 
 if ENABLE_SELF_CHECKS
 COBJECTS += crypto-selftests.c crypto-selftests-pk.c
